Use storage instead of solr to traverse id's.
